feat: разработать блоки footer

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <header class="header">
       <div class="header__mobile">
         <a href="#" class="header__logo-container">
-          <span class="header__logo-title">SMM<span class="header__span-accent">PRIME</span></span>
+          <span class="logo-title logo-title_pos_header">SMM<span class="logo-accent">PRIME</span></span>
           <span class="header__logo-subtitle">с 2017 года помогаем продвигаться в соцсетях</span>
         </a>
         <button class="menu-burger">
@@ -26,7 +26,7 @@
       </div>
       <nav class="header__nav">
         <ul class="header__links-list">
-          <li lang="en" class="header__link-container">
+          <li class="header__link-container">
             <a href="#" class="header__link">Услуги</a>
           </li>
           <li lang="en" class="header__link-container">
@@ -55,7 +55,6 @@
               <a href="#" class="header__link">Комментарии</a>
               <a href="#" class="header__link">Комментарии</a>
               <a href="#" class="header__link">Комментарии</a>
-
             </ul>
           </li>
           <li lang="en" class="header__link-container">
@@ -777,6 +776,139 @@
       </section>
     </main>
     <footer class="footer">
+      <div class="footer__container">
+        <div class="footer__section footer__section_type_copyright">
+          <a href="#" class="header__logo-container">
+            <span class="logo-title">SMM<span class="logo-accent">PRIME</span></span>
+          </a>
+          <p class="footer__copyright">&#169;2017-<span class="footer__current-data"></span></p>
+        </div>
+        <div class="footer__section footer__section_type_meta">
+          <p class="footer__text">*продукт компании Meta - признано экстремисткой организацией
+            и запрещено в России.</p>
+        </div>
+        <div class="footer__section footer__section_type_social">
+          <a href="#" class="footer__social">
+            <img class="footer__social-logo" src="./images/socials/vk-icon.svg" alt="Лого ВК">
+          </a>
+          <a href="#" class="footer__social">
+            <img class="footer__social-logo" src="./images/socials/telegram-icon.svg" alt="Лого Телеграм">
+          </a>
+        </div>
+        <div class="footer__section footer__section_type_up">
+          <a href="#" class="footer__link-up"></a>
+        </div>
+        <div class="footer__section footer__section_type_company">
+          <a href="#" class="footer__subtitle-link footer__link_type_upper-menu">SMMPRIME</a>
+          <div class="footer__company-container">
+            <ul  class="footer__links">
+              <li><a href="#" class="footer__link">Правила и условия</a></li>
+              <li class="footer__link"><a href="#" class="footer__link">Оферта</a></li>
+            </ul>
+            <a href="#" class="footer__subtitle-link">API</a>
+          </div>
+        </div>
+        <div class="footer__section footer__section_type_services">
+          <a href="#" class="footer__subtitle-link footer__link_type_upper-menu">Услуги</a>
+          <ul class="footer__links">
+            <li>
+              <a href="#" class="footer__link footer__link_type_menu">Instagram*</a>
+              <ul class="footer__sublinks footer__links_type_sublist">
+                <a href="#" class="footer__link">Подписчики</a>
+                <a href="#" class="footer__link">Комментарии</a>
+                <a href="#" class="footer__link">Друзья</a>
+                <a href="#" class="footer__link">Комментарии</a>
+                <a href="#" class="footer__link">Комментарии</a>
+                <a href="#" class="footer__link">Комментарии</a>
+                <a href="#" class="footer__link">Комментарии</a>
+                <a href="#" class="footer__link">Комментарии</a>
+              </ul>
+            </li>
+            <li>
+              <a href="#" class="footer__link footer__link_type_menu">ТikTok</a>
+              <ul class="footer__sublinks footer__links_type_sublist">
+                <a href="#" class="footer__link">Подписчики</a>
+                <a href="#" class="footer__link">Комментарии</a>
+                <a href="#" class="footer__link">Друзья</a>
+                <a href="#" class="footer__link">Комментарии</a>
+                <a href="#" class="footer__link">Комментарии</a>
+                <a href="#" class="footer__link">Комментарии</a>
+                <a href="#" class="footer__link">Комментарии</a>
+                <a href="#" class="footer__link">Комментарии</a>
+              </ul>
+            </li>
+            <li>
+              <a href="#" class="footer__link footer__link_type_menu">YouTube</a>
+              <ul class="footer__sublinks footer__links_type_sublist">
+                <a href="#" class="footer__link">Подписчики</a>
+                <a href="#" class="footer__link">Комментарии</a>
+                <a href="#" class="footer__link">Друзья</a>
+                <a href="#" class="footer__link">Комментарии</a>
+                <a href="#" class="footer__link">Комментарии</a>
+                <a href="#" class="footer__link">Комментарии</a>
+                <a href="#" class="footer__link">Комментарии</a>
+                <a href="#" class="footer__link">Комментарии</a>
+              </ul>
+            </li>
+            <li>
+              <a href="#" class="footer__link footer__link_type_menu">Telegram</a>
+              <ul class="footer__sublinks footer__links_type_sublist">
+                <a href="#" class="footer__link">Подписчики</a>
+                <a href="#" class="footer__link">Комментарии</a>
+                <a href="#" class="footer__link">Друзья</a>
+                <a href="#" class="footer__link">Комментарии</a>
+                <a href="#" class="footer__link">Комментарии</a>
+                <a href="#" class="footer__link">Комментарии</a>
+                <a href="#" class="footer__link">Комментарии</a>
+                <a href="#" class="footer__link">Комментарии</a>
+              </ul>
+            </li>
+            <li>
+              <a href="#" class="footer__link footer__link_type_menu">VK</a>
+              <ul class="footer__sublinks footer__links_type_sublist">
+                <a href="#" class="footer__link">Подписчики</a>
+                <a href="#" class="footer__link">Комментарии</a>
+                <a href="#" class="footer__link">Друзья</a>
+                <a href="#" class="footer__link">Комментарии</a>
+                <a href="#" class="footer__link">Комментарии</a>
+                <a href="#" class="footer__link">Комментарии</a>
+                <a href="#" class="footer__link">Комментарии</a>
+                <a href="#" class="footer__link">Комментарии</a>
+              </ul>
+            </li>
+            <li>
+              <a href="#" class="footer__link footer__link_type_menu">Facebook*</a>
+              <ul class="footer__sublinks footer__links_type_sublist">
+                <a href="#" class="footer__link">Подписчики</a>
+                <a href="#" class="footer__link">Комментарии</a>
+                <a href="#" class="footer__link">Друзья</a>
+                <a href="#" class="footer__link">Комментарии</a>
+                <a href="#" class="footer__link">Комментарии</a>
+                <a href="#" class="footer__link">Комментарии</a>
+                <a href="#" class="footer__link">Комментарии</a>
+                <a href="#" class="footer__link">Комментарии</a>
+              </ul>
+            </li>
+          </ul>
+        </div>
+        <div class="footer__section footer__section_type_contacts">
+          <h3 class="footer__subtitle">Контакты</h3>
+          <ul class="footer__contact-container">
+            <li class="footer__contact">
+              <h4 class="footer__contact-title">Технические вопросы</h4>
+              <a href="" class="footer__link">smmprime@mail.ru</a>
+            </li>
+            <li class="footer__contact">
+              <h4 class="footer__contact-title">Вопросы позаказам</h4>
+              <a href="" class="footer__link">Поддержка в Телеграм</a>
+            </li>
+            <li class="footer__contact">
+              <h4 class="footer__contact-title">Время работы онлайн тех.поддержки</h4>
+              <a href="" class="footer__link">пн-вс с 10 до 22</a>
+            </li>
+          </ul>
+        </div>
+      </div>
     </footer>
     <template id="culc-template-image">
       <li class="culc__item culc-template-image-container">
