feat: разработать блоки footer

--- a/index.html
+++ b/index.html
@@ -779,7 +779,7 @@
       <div class="footer__container">
         <div class="footer__section footer__section_type_copyright">
           <a href="#" class="header__logo-container">
-            <span class="logo-title">SMM<span class="logo-accent">PRIME</span></span>
+            <span class="logo-title logo-title_pos_footer">SMM<span class="logo-accent">PRIME</span></span>
           </a>
           <p class="footer__copyright">&#169;2017-<span class="footer__current-data"></span></p>
         </div>
