feat: разработать блок registration

--- a/index.html
+++ b/index.html
@@ -233,6 +233,20 @@
           <p class="text guarantee__text">бесплатно докрутим, если кто-то отпишется в течение 30 дней</p>
         </div>
       </section>
+      <section class="registration">
+        <h2 class="section-title registration__title">Вход</h2>
+        <form class="registration__form" action="" name="registration">
+          <input placeholder="Логин" name="login" class="registration__input registration__input_type_text registration__input_grid_login" type="text">
+          <input placeholder="Пароль" name="password" class="registration__input registration__input_type_text registration__input_grid_password" type="password">
+          <label for="remember-checkbox" class="registration__checkbox-label registration__input_grid_remember">
+            <input name="remember" id="remember-checkbox" class="registration__input registration__input_type_checkbox" type="checkbox">
+            <p class="registration__text">Запомнить меня</p>
+          </label>
+          <p class="registration__text registration__text_grid_registration">Нет аккаунта? <a class="registration__link" href="#">Зарегистрироваться</a></p>
+          <a class="registration__link registration__link_grid_forget" href="#">Забыли пароль?</a>
+          <button class="btn btn_color_orange registration__button">Войти в кабинет</button>
+        </form>
+      </section>
       <article class="long-read">
         <section class="long-read__section long-read__section_theme_dark long-read__section_pos_first">
           <h2 class="section-title long-read__title">Обычная накрутка всегда заметна</h2>
