--- a/index.html
+++ b/index.html
@@ -27,44 +27,72 @@
       <nav class="header__nav">
         <ul class="header__links-list">
           <li class="header__link-container">
-            <a href="#" class="header__link">Услуги</a>
+            <a href="#" class="header__link header__link_type_menu">Услуги</a>
+            <ul class="header__links-sublist">
+              <a href="#" class="header__link">Лайки</a>
+              <a href="#" class="header__link">Подписчики</a>
+              <a href="#" class="header__link">Комментарии</a>
+              <a href="#" class="header__link">Просмотры</a>
+              <a href="#" class="header__link">Репосты</a>
+            </ul>
           </li>
           <li lang="en" class="header__link-container">
             <a href="#" class="header__link header__link_type_menu">ТikTok</a>
             <ul class="header__links-sublist">
               <a href="#" class="header__link">Главная</a>
+              <a href="#" class="header__link">Просмотры</a>
               <a href="#" class="header__link">Подписчики</a>
+              <a href="#" class="header__link">Лайки</a>
               <a href="#" class="header__link">Комментарии</a>
-              <a href="#" class="header__link">Друзья</a>
-              <a href="#" class="header__link">Комментарии</a>
-              <a href="#" class="header__link">Комментарии</a>
-              <a href="#" class="header__link">Комментарии</a>
-              <a href="#" class="header__link">Комментарии</a>
-              <a href="#" class="header__link">Комментарии</a>
-
             </ul>
           </li>
           <li lang="en" class="header__link-container">
             <a href="#" class="header__link header__link_type_menu">Telegram</a>
             <ul class="header__links-sublist">
+              <a href="#" class="header__link">Главная</a>
               <a href="#" class="header__link">Подписчики</a>
+              <a href="#" class="header__link">Просмотры</a>
+              <a href="#" class="header__link">Реакции</a>
+              <a href="#" class="header__link">Голосования</a>
               <a href="#" class="header__link">Комментарии</a>
-              <a href="#" class="header__link">Друзья</a>
-              <a href="#" class="header__link">Комментарии</a>
-              <a href="#" class="header__link">Комментарии</a>
-              <a href="#" class="header__link">Комментарии</a>
-              <a href="#" class="header__link">Комментарии</a>
-              <a href="#" class="header__link">Комментарии</a>
+              <a href="#" class="header__link">Репосты</a>
             </ul>
           </li>
           <li lang="en" class="header__link-container">
             <a href="#" class="header__link header__link_type_menu">YouTube</a>
+            <ul class="header__links-sublist">
+              <a href="#" class="header__link">Главная</a>
+              <a href="#" class="header__link">Подписчики</a>
+              <a href="#" class="header__link">Просмотры</a>
+              <a href="#" class="header__link">Лайки</a>
+              <a href="#" class="header__link">Комментарии</a>
+            </ul>
           </li>
           <li lang="en" class="header__link-container">
             <a href="#" class="header__link header__link_type_menu">VK</a>
+            <ul class="header__links-sublist">
+              <a href="#" class="header__link">Главная</a>
+              <a href="#" class="header__link">Подписчики</a>
+              <a href="#" class="header__link">Просмотры</a>
+              <a href="#" class="header__link">Лайки</a>
+              <a href="#" class="header__link">Опросы</a>
+              <a href="#" class="header__link">Прослушивания</a>
+              <a href="#" class="header__link">Комментарии</a>
+              <a href="#" class="header__link">Друзья</a>
+              <a href="#" class="header__link">Репосты</a>
+            </ul>
           </li>
           <li lang="en" class="header__link-container">
             <a href="#" class="header__link header__link_type_menu">Instagram*</a>
+            <ul class="header__links-sublist">
+              <a href="#" class="header__link">Главная</a>
+              <a href="#" class="header__link">Лайки</a>
+              <a href="#" class="header__link">Подписчики</a>
+              <a href="#" class="header__link">Просмотры</a>
+              <a href="#" class="header__link">Голоса</a>
+              <a href="#" class="header__link">Репосты</a>
+              <a href="#" class="header__link">Комментарии</a>
+            </ul>
           </li>
         </ul>
         <div class="header__socials-container">
@@ -398,7 +426,7 @@
               <figcaption class="user-review__name">Анна Панкратова, <a href="#" class="user-review__link">смотреть отзыв на сервисе</a></figcaption>
           </figure>
         </div>
-        <div class="optimization__culc choice__culc culc" id="second-culc">
+        <div class="optimization__culc choice__culc culc" id="first-culc">
           <div class="optimization__label">
             <h3 class="optimization__label-title">Скидка 8% навсегда</h3>
             <p class="optimization__label-text">при заказе от 10.000 рублей</p>
@@ -645,7 +673,7 @@
       <section class="choice">
         <div class="choice__container">
           <h2 class="section-title choice__title">Выбери платформу, чтобы начать:</h2>
-          <div class="choice__culc culc" id="first-culc">
+          <div class="choice__culc culc" id="second-culc">
             <ul class="choice__list culc__list"></ul>
             <div class="choice__services choice__services_hided culc__service-container">
               <h3 class="choice__subtitle">Выберите тип услуги:</h3>
@@ -828,80 +856,63 @@
             <li>
               <a href="#" class="footer__link footer__link_type_menu">Instagram*</a>
               <ul class="footer__sublinks footer__links_type_sublist">
+                <a href="#" class="footer__link">Главная</a>
+                <a href="#" class="footer__link">Лайки</a>
                 <a href="#" class="footer__link">Подписчики</a>
-                <a href="#" class="footer__link">Комментарии</a>
-                <a href="#" class="footer__link">Друзья</a>
-                <a href="#" class="footer__link">Комментарии</a>
-                <a href="#" class="footer__link">Комментарии</a>
-                <a href="#" class="footer__link">Комментарии</a>
-                <a href="#" class="footer__link">Комментарии</a>
+                <a href="#" class="footer__link">Просмотры</a>
+                <a href="#" class="footer__link">Голоса</a>
+                <a href="#" class="footer__link">Репосты</a>
                 <a href="#" class="footer__link">Комментарии</a>
               </ul>
             </li>
             <li>
               <a href="#" class="footer__link footer__link_type_menu">ТikTok</a>
               <ul class="footer__sublinks footer__links_type_sublist">
+                <a href="#" class="footer__link">Главная</a>
+                <a href="#" class="footer__link">Просмотры</a>
                 <a href="#" class="footer__link">Подписчики</a>
-                <a href="#" class="footer__link">Комментарии</a>
-                <a href="#" class="footer__link">Друзья</a>
-                <a href="#" class="footer__link">Комментарии</a>
-                <a href="#" class="footer__link">Комментарии</a>
-                <a href="#" class="footer__link">Комментарии</a>
-                <a href="#" class="footer__link">Комментарии</a>
+                <a href="#" class="footer__link">Лайки</a>
                 <a href="#" class="footer__link">Комментарии</a>
               </ul>
             </li>
             <li>
               <a href="#" class="footer__link footer__link_type_menu">YouTube</a>
               <ul class="footer__sublinks footer__links_type_sublist">
+                <a href="#" class="footer__link">Главная</a>
                 <a href="#" class="footer__link">Подписчики</a>
-                <a href="#" class="footer__link">Комментарии</a>
-                <a href="#" class="footer__link">Друзья</a>
-                <a href="#" class="footer__link">Комментарии</a>
-                <a href="#" class="footer__link">Комментарии</a>
-                <a href="#" class="footer__link">Комментарии</a>
-                <a href="#" class="footer__link">Комментарии</a>
+                <a href="#" class="footer__link">Просмотры</a>
+                <a href="#" class="footer__link">Лайки</a>
                 <a href="#" class="footer__link">Комментарии</a>
               </ul>
             </li>
             <li>
               <a href="#" class="footer__link footer__link_type_menu">Telegram</a>
               <ul class="footer__sublinks footer__links_type_sublist">
+                <a href="#" class="footer__link">Главная</a>
                 <a href="#" class="footer__link">Подписчики</a>
+                <a href="#" class="footer__link">Просмотры</a>
+                <a href="#" class="footer__link">Реакции</a>
+                <a href="#" class="footer__link">Голосования</a>
                 <a href="#" class="footer__link">Комментарии</a>
-                <a href="#" class="footer__link">Друзья</a>
-                <a href="#" class="footer__link">Комментарии</a>
-                <a href="#" class="footer__link">Комментарии</a>
-                <a href="#" class="footer__link">Комментарии</a>
-                <a href="#" class="footer__link">Комментарии</a>
-                <a href="#" class="footer__link">Комментарии</a>
+                <a href="#" class="footer__link">Репосты</a>
               </ul>
             </li>
             <li>
               <a href="#" class="footer__link footer__link_type_menu">VK</a>
               <ul class="footer__sublinks footer__links_type_sublist">
+                <a href="#" class="footer__link">Главная</a>
                 <a href="#" class="footer__link">Подписчики</a>
+                <a href="#" class="footer__link">Просмотры</a>
+                <a href="#" class="footer__link">Лайки</a>
+                <a href="#" class="footer__link">Опросы</a>
+                <a href="#" class="footer__link">Прослушивания</a>
                 <a href="#" class="footer__link">Комментарии</a>
                 <a href="#" class="footer__link">Друзья</a>
-                <a href="#" class="footer__link">Комментарии</a>
-                <a href="#" class="footer__link">Комментарии</a>
-                <a href="#" class="footer__link">Комментарии</a>
-                <a href="#" class="footer__link">Комментарии</a>
-                <a href="#" class="footer__link">Комментарии</a>
+                <a href="#" class="footer__link">Репосты</a>
               </ul>
             </li>
             <li>
-              <a href="#" class="footer__link footer__link_type_menu">Facebook*</a>
-              <ul class="footer__sublinks footer__links_type_sublist">
-                <a href="#" class="footer__link">Подписчики</a>
-                <a href="#" class="footer__link">Комментарии</a>
-                <a href="#" class="footer__link">Друзья</a>
-                <a href="#" class="footer__link">Комментарии</a>
-                <a href="#" class="footer__link">Комментарии</a>
-                <a href="#" class="footer__link">Комментарии</a>
-                <a href="#" class="footer__link">Комментарии</a>
-                <a href="#" class="footer__link">Комментарии</a>
-              </ul>
+              <a href="#" class="footer__link">Facebook*</a>
             </li>
           </ul>
         </div>
@@ -934,7 +945,7 @@
     <template id="culc-template-text">
       <li class="culc__item culc-template-text-container">
         <div class="culc__image-container culc__image-container_type_service">
-          <img class="culc__image culc__image_type_service" src="" alt="">
+          <img class="culc__image" src="" alt="">
         </div>
         <p class="culc__text"></p>
       </li>
