refactor: мелкие доработки

--- a/index.html
+++ b/index.html
@@ -688,7 +688,7 @@
                 <span class="choice__amount culc__amount"></span>
                 шт.
               </p>
-              <a href="" class="btn btn_color_orange btn_size_large choice__button">Ознакомиться с услугами &rarr;</a>
+              <a href="" class="btn btn_color_orange btn_size_large choice__button">Ознакомиться с услугами</a>
             </div>
           </div>
         </div>
