feat: добавить страницу telegram

--- a/index.html
+++ b/index.html
@@ -579,10 +579,12 @@
           </ul>
         </div>
       </section>
-      <section class="confidentiality confidentiality_bg_orange">
-        <h2 class="section-title confidentiality__title">100% конфиденциальность</h2>
-        <p class="text confidentiality__text">Никто не узнает, что вы накручивали показатели у нас — это технически невозможно
-          (Если вы не скажете самостоятельно)</p>
+      <section class="confidentiality">
+        <div class="confidentiality__container confidentiality__container_bg_orange">
+          <h2 class="section-title confidentiality__title">100% конфиденциальность</h2>
+          <p class="text confidentiality__text">Никто не узнает, что вы накручивали показатели у нас — это технически невозможно
+            (Если вы не скажете самостоятельно)</p>
+        </div>
       </section>
       <section class="non-block">
         <h2 class="section-title non-block__title">За накрутку не блокируют</h2>
