--- a/telegram.html
+++ b/telegram.html
@@ -293,10 +293,12 @@
         <p class="text performe__text">чтобы не получилось так, что на ваш салон красоты подписаны только суровые мужчины 😏</p>
         <img loading="lazy" src="./images/performe-img.webp" alt="Выбор услуги" class="performe__image">
       </section>
-      <section class="confidentiality confidentiality_bg_blue">
-        <h2 class="section-title confidentiality__title">100% конфиденциальность</h2>
-        <p class="text confidentiality__text">Никто не узнает, что вы накручивали показатели у нас — это технически невозможно
-          (Если вы не скажете самостоятельно)</p>
+      <section class="confidentiality confidentiality_theme_light">
+        <div class="confidentiality__container confidentiality__container_bg_blue">
+          <h2 class="section-title confidentiality__title">100% конфиденциальность</h2>
+          <p class="text confidentiality__text">Никто не узнает, что вы накручивали показатели у нас — это технически невозможно
+            (Если вы не скажете самостоятельно)</p>
+        </div>
       </section>
       <section class="connection">
         <div class="connection__container">
