feat: добавить скролл

--- a/telegram.html
+++ b/telegram.html
@@ -21,7 +21,7 @@
             >с 2017 года помогаем продвигаться в соцсетях</span
           >
         </a>
-        <button class="menu-burger">
+        <button class="menu-burger" type="button" aria-label="Открыть меню">
           <span class="menu-burger__item"></span>
           <span class="menu-burger__item"></span>
           <span class="menu-burger__item"></span>
@@ -317,8 +317,9 @@
             <li class="service-list__header-item">ID</li>
             <li class="service-list__header-item">Название</li>
             <li class="service-list__header-item">Стоимость за 1 000</li>
+            <li class="service-list__header-item">Время запуска</li>
+            <li class="service-list__header-item">Скорость</li>
             <li class="service-list__header-item">Гарантия</li>
-            <li class="service-list__header-item">Время запуска услуги</li>
             <li class="service-list__header-item"></li>
           </ul>
           <ul class="service-list__body"></ul>
@@ -809,7 +810,7 @@
           </div>
         </div>
       </section>
-      <article class="long-read">
+      <article class="long-read owl-carousel" id="long-read">
         <section
           class="long-read__section long-read__section_theme_dark long-read__section_pos_first"
         >
@@ -1338,7 +1339,11 @@
           <li class="faq__item">
             <div class="faq__announce">
               <p class="faq__subtitle">Вы даёте гарантию на ваши услуги?</p>
-              <button class="btn faq__button"></button>
+              <button
+                type="button"
+                aria-label="Открыть описание"
+                class="btn faq__button"
+              ></button>
             </div>
             <div class="faq__description faq__description_closed">
               <p class="faq__text faq__text_closed">
@@ -1352,7 +1357,11 @@
           <li class="faq__item">
             <div class="faq__announce">
               <p class="faq__subtitle">Зачем нужно накручивать комментарии?</p>
-              <button class="btn faq__button"></button>
+              <button
+                type="button"
+                aria-label="Открыть описание"
+                class="btn faq__button"
+              ></button>
             </div>
             <div class="faq__description faq__description_closed">
               <p class="faq__text faq__text_closed">
@@ -1367,7 +1376,11 @@
           <li class="faq__item">
             <div class="faq__announce">
               <p class="faq__subtitle">Что такое восстановление?</p>
-              <button class="btn faq__button"></button>
+              <button
+                type="button"
+                aria-label="Открыть описание"
+                class="btn faq__button"
+              ></button>
             </div>
             <div class="faq__description faq__description_closed">
               <p class="faq__text faq__text_closed">
@@ -1382,7 +1395,11 @@
           <li class="faq__item">
             <div class="faq__announce">
               <p class="faq__subtitle">Зачем нужно накручивать просмотры?</p>
-              <button class="btn faq__button"></button>
+              <button
+                type="button"
+                aria-label="Открыть описание"
+                class="btn faq__button"
+              ></button>
             </div>
             <div class="faq__description faq__description_closed">
               <p class="faq__text faq__text_closed">
@@ -1399,7 +1416,11 @@
               <p class="faq__subtitle">
                 Как происходит продвижение в социальных сетях?
               </p>
-              <button class="btn faq__button"></button>
+              <button
+                type="button"
+                aria-label="Открыть описание"
+                class="btn faq__button"
+              ></button>
             </div>
             <div class="faq__description faq__description_closed">
               <p class="faq__text faq__text_closed">
@@ -1415,7 +1436,11 @@
               <p class="faq__subtitle">
                 Как у вас реализуется технология живых комментариев?
               </p>
-              <button class="btn faq__button"></button>
+              <button
+                type="button"
+                aria-label="Открыть описание"
+                class="btn faq__button"
+              ></button>
             </div>
             <div class="faq__description faq__description_closed">
               <p class="faq__text faq__text_closed">
@@ -1430,7 +1455,11 @@
           <li class="faq__item">
             <div class="faq__announce">
               <p class="faq__subtitle">Насколько ваш сервис конфиденциален?</p>
-              <button class="btn faq__button"></button>
+              <button
+                type="button"
+                aria-label="Открыть описание"
+                class="btn faq__button"
+              ></button>
             </div>
             <div class="faq__description faq__description_closed">
               <p class="faq__text faq__text_closed">
@@ -1443,7 +1472,11 @@
           <li class="faq__item">
             <div class="faq__announce">
               <p class="faq__subtitle">Как накрутка поможет моему заработку?</p>
-              <button class="btn faq__button"></button>
+              <button
+                type="button"
+                aria-label="Открыть описание"
+                class="btn faq__button"
+              ></button>
             </div>
             <div class="faq__description faq__description_closed">
               <p class="faq__text faq__text_closed">
@@ -1461,7 +1494,11 @@
                 Не испортит ли накрутка статистику в инстаграме, тиктоке и
                 других соц. сетях?
               </p>
-              <button class="btn faq__button"></button>
+              <button
+                type="button"
+                aria-label="Открыть описание"
+                class="btn faq__button"
+              ></button>
             </div>
             <div class="faq__description faq__description_closed">
               <p class="faq__text faq__text_closed">
@@ -1477,7 +1514,11 @@
               <p class="faq__subtitle">
                 Почему на вашем сайте такие низкие цены?
               </p>
-              <button class="btn faq__button"></button>
+              <button
+                type="button"
+                aria-label="Открыть описание"
+                class="btn faq__button"
+              ></button>
             </div>
             <div class="faq__description faq__description_closed">
               <p class="faq__text faq__text_closed">
@@ -1659,12 +1700,16 @@
             <span class="service-list__body-item_type_cost"></span>
           </li>
           <li class="service-list__body-item">
-            <span class="service-list__text-accent">Гарантия:</span>
-            <span class="service-list__body-item_type_guarantee"></span>
-          </li>
-          <li class="service-list__body-item">
             <span class="service-list__text-accent">Время запуска услуги:</span>
             <span class="service-list__body-item_type_timetostart"></span>
+          </li>
+          <li class="service-list__body-item">
+            <span class="service-list__text-accent">Скорость:</span>
+            <span class="service-list__body-item_type_speed"></span>
+          </li>
+          <li class="service-list__body-item">
+            <span class="service-list__text-accent">Гарантия:</span>
+            <span class="service-list__body-item_type_guarantee"></span>
           </li>
           <li
             class="service-list__body-item service-list__body-item_type_button"
@@ -1706,5 +1751,38 @@
     </div>
     <script type="module" src="./scripts/base.js"></script>
     <script type="module" src="./scripts/pages/social.js"></script>
+    <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
+    <script src="./scripts/libraries/jquery.mousewheel.min.js"></script>
+    <script src="./scripts/libraries/owl.carousel.js"></script> -->
+    <!-- <script>
+      var owl = $('.owl-carousel');
+      owl.owlCarousel({
+        loop: true,
+        nav: true,
+        margin: 10,
+        responsive: {
+          0: {
+            items: 1,
+          },
+          600: {
+            items: 3,
+          },
+          960: {
+            items: 5,
+          },
+          1200: {
+            items: 6,
+          },
+        },
+      });
+      owl.on('mousewheel', '.owl-stage', function (e) {
+        if (e.deltaY > 0) {
+          owl.trigger('next.owl');
+        } else {
+          owl.trigger('prev.owl');
+        }
+        e.preventDefault();
+      });
+    </script> -->
   </body>
 </html>
