--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             >с 2017 года помогаем продвигаться в соцсетях</span
           >
         </a>
-        <button class="menu-burger">
+        <button type="button" aria-label="Открыть меню" class="menu-burger">
           <span class="menu-burger__item"></span>
           <span class="menu-burger__item"></span>
           <span class="menu-burger__item"></span>
@@ -1337,7 +1337,11 @@
           <li class="faq__item">
             <div class="faq__announce">
               <p class="faq__subtitle">Вы даёте гарантию на ваши услуги?</p>
-              <button class="btn faq__button"></button>
+              <button
+                type="button"
+                aria-label="Открыть описание"
+                class="btn faq__button"
+              ></button>
             </div>
             <div class="faq__description faq__description_closed">
               <p class="faq__text faq__text_closed">
@@ -1351,7 +1355,11 @@
           <li class="faq__item">
             <div class="faq__announce">
               <p class="faq__subtitle">Зачем нужно накручивать комментарии?</p>
-              <button class="btn faq__button"></button>
+              <button
+                type="button"
+                aria-label="Открыть описание"
+                class="btn faq__button"
+              ></button>
             </div>
             <div class="faq__description faq__description_closed">
               <p class="faq__text faq__text_closed">
@@ -1366,7 +1374,11 @@
           <li class="faq__item">
             <div class="faq__announce">
               <p class="faq__subtitle">Что такое восстановление?</p>
-              <button class="btn faq__button"></button>
+              <button
+                type="button"
+                aria-label="Открыть описание"
+                class="btn faq__button"
+              ></button>
             </div>
             <div class="faq__description faq__description_closed">
               <p class="faq__text faq__text_closed">
@@ -1381,7 +1393,11 @@
           <li class="faq__item">
             <div class="faq__announce">
               <p class="faq__subtitle">Зачем нужно накручивать просмотры?</p>
-              <button class="btn faq__button"></button>
+              <button
+                type="button"
+                aria-label="Открыть описание"
+                class="btn faq__button"
+              ></button>
             </div>
             <div class="faq__description faq__description_closed">
               <p class="faq__text faq__text_closed">
@@ -1398,7 +1414,11 @@
               <p class="faq__subtitle">
                 Как происходит продвижение в социальных сетях?
               </p>
-              <button class="btn faq__button"></button>
+              <button
+                type="button"
+                aria-label="Открыть описание"
+                class="btn faq__button"
+              ></button>
             </div>
             <div class="faq__description faq__description_closed">
               <p class="faq__text faq__text_closed">
@@ -1414,7 +1434,11 @@
               <p class="faq__subtitle">
                 Как у вас реализуется технология живых комментариев?
               </p>
-              <button class="btn faq__button"></button>
+              <button
+                type="button"
+                aria-label="Открыть описание"
+                class="btn faq__button"
+              ></button>
             </div>
             <div class="faq__description faq__description_closed">
               <p class="faq__text faq__text_closed">
@@ -1429,7 +1453,11 @@
           <li class="faq__item">
             <div class="faq__announce">
               <p class="faq__subtitle">Насколько ваш сервис конфиденциален?</p>
-              <button class="btn faq__button"></button>
+              <button
+                type="button"
+                aria-label="Открыть описание"
+                class="btn faq__button"
+              ></button>
             </div>
             <div class="faq__description faq__description_closed">
               <p class="faq__text faq__text_closed">
@@ -1442,7 +1470,11 @@
           <li class="faq__item">
             <div class="faq__announce">
               <p class="faq__subtitle">Как накрутка поможет моему заработку?</p>
-              <button class="btn faq__button"></button>
+              <button
+                type="button"
+                aria-label="Открыть описание"
+                class="btn faq__button"
+              ></button>
             </div>
             <div class="faq__description faq__description_closed">
               <p class="faq__text faq__text_closed">
@@ -1460,7 +1492,11 @@
                 Не испортит ли накрутка статистику в инстаграме, тиктоке и
                 других соц. сетях?
               </p>
-              <button class="btn faq__button"></button>
+              <button
+                type="button"
+                aria-label="Открыть описание"
+                class="btn faq__button"
+              ></button>
             </div>
             <div class="faq__description faq__description_closed">
               <p class="faq__text faq__text_closed">
@@ -1476,7 +1512,11 @@
               <p class="faq__subtitle">
                 Почему на вашем сайте такие низкие цены?
               </p>
-              <button class="btn faq__button"></button>
+              <button
+                type="button"
+                aria-label="Открыть описание"
+                class="btn faq__button"
+              ></button>
             </div>
             <div class="faq__description faq__description_closed">
               <p class="faq__text faq__text_closed">
