feat: добавить скролл

--- a/telegram.html
+++ b/telegram.html
@@ -848,7 +848,7 @@
             </p>
           </section>
           <section
-            class="long-read__section long-read__section_theme_dark long-read__section_size_l long-read__section_align_center long-read__section_type_curve"
+            class="long-read__section long-read__section_theme_dark long-read__section_size_l long-read__section_type_curve"
           >
             <h3 class="long-read__description">
               Такому не доверяют. Накручивая обычным способом, вы теряете
@@ -906,7 +906,7 @@
               небольших затратах
             </p>
           </section>
-          <section class="long-read__section long-read__section_align_center">
+          <section class="long-read__section">
             <figure class="long-read__review user-review">
               <blockquote class="long-read__quote user-review__quote">
                 <p class="user-review__grade long-read__grade">
@@ -943,9 +943,7 @@
               </figcaption>
             </figure>
           </section>
-          <section
-            class="long-read__section long-read__section_size_l long-read__section_align_center"
-          >
+          <section class="long-read__section long-read__section_size_l">
             <h2 class="section-title long-read__title">
               Заказать иммитацию органического роста через персонального
               менеджера
