feat: переделать блок long-read

--- a/telegram.html
+++ b/telegram.html
@@ -823,30 +823,34 @@
               вычислять
             </p>
           </section>
-          <section class="long-read__section long-read__section_theme_dark">
-            <img
-              class="long-read__image"
-              loading="lazy"
-              src="./images/long-read/long-read-first.png"
-              alt="Диаграмма"
-            />
-            <p class="text long-read__text">
-              Резкие скачки, большая цифра за короткое время — явные признаки
-              накрутки
-            </p>
-          </section>
-          <section class="long-read__section long-read__section_theme_dark">
-            <img
-              class="long-read__image"
-              loading="lazy"
-              src="./images/long-read/long-read-second.png"
-              alt="Подписчики"
-            />
-            <p class="text long-read__text">
-              Много подписчиков, мало активности, комментарии не по теме,
-              подписчики-боты
-            </p>
-          </section>
+          <div
+            class="long-read__subcontainer long-read__subcontainer_theme_dark"
+          >
+            <section class="long-read__section long-read__section_theme_dark">
+              <img
+                class="long-read__image"
+                loading="lazy"
+                src="./images/long-read/long-read-first.png"
+                alt="Диаграмма"
+              />
+              <p class="text long-read__text">
+                Резкие скачки, большая цифра за короткое время — явные признаки
+                накрутки
+              </p>
+            </section>
+            <section class="long-read__section long-read__section_theme_dark">
+              <img
+                class="long-read__image"
+                loading="lazy"
+                src="./images/long-read/long-read-second.png"
+                alt="Подписчики"
+              />
+              <p class="text long-read__text">
+                Много подписчиков, мало активности, комментарии не по теме,
+                подписчики-боты
+              </p>
+            </section>
+          </div>
           <section
             class="long-read__section long-read__section_theme_dark long-read__section_size_l long-read__section_type_curve"
           >
@@ -863,86 +867,94 @@
               при котором процесс идет плавно, и всё выглядит натурально
             </p>
           </section>
-          <section class="long-read__section">
-            <h4 class="long-read__accent-title">
-              Постепенный рост показателей
-            </h4>
-            <img
-              class="long-read__image"
-              loading="lazy"
-              src="./images/long-read/long-read-third.png"
-              alt="Накрутка"
-            />
-            <p class="text long-read__text">
-              Накрутка не заметна, потому что прирост показателей происходит по
-              интервалам, последовательно и гармонично
-            </p>
-          </section>
-          <section class="long-read__section">
-            <h4 class="long-read__accent-title">Живые комментарии по теме</h4>
-            <img
-              class="long-read__image"
-              loading="lazy"
-              src="./images/long-read/long-read-fourth.png"
-              alt="Комментарии"
-            />
-            <p class="text long-read__text">
-              Живые комментарии по теме поста от реальных пользователей помогут
-              увеличить доверие
-            </p>
-          </section>
-          <section class="long-read__section">
-            <h4 class="long-read__accent-title">
-              Аккаунты, неотличимые от реальных людей
-            </h4>
-            <img
-              class="long-read__image"
-              loading="lazy"
-              src="./images/long-read/long-read-fifth.png"
-              alt="Имидж"
-            />
-            <p class="text long-read__text">
-              Они помогут сделать имидж аккаунту и увеличить доверие при
-              небольших затратах
-            </p>
-          </section>
-          <section class="long-read__section">
-            <figure class="long-read__review user-review">
-              <blockquote class="long-read__quote user-review__quote">
-                <p class="user-review__grade long-read__grade">
-                  Оценка: <span class="user-review__span-accent">4.8</span>
-                </p>
-                <ul class="user-review__stars">
-                  <li
-                    class="user-review__star user-review__star_type_full"
-                  ></li>
-                  <li
-                    class="user-review__star user-review__star_type_full"
-                  ></li>
-                  <li
-                    class="user-review__star user-review__star_type_full"
-                  ></li>
-                  <li
-                    class="user-review__star user-review__star_type_full"
-                  ></li>
-                  <li
-                    class="user-review__star user-review__star_type_semi"
-                  ></li>
-                </ul>
-                <p class="user-review__review">
-                  Привели живых хороших подписчиков, многие из которых оказались
-                  целевой аудиторией, это очень приятно!
-                </p>
-              </blockquote>
-              <img src="./images/blar.png" alt="" class="user-review__avatar" />
-              <figcaption class="long-read__name user-review__name">
-                Kimmy Blar,
-                <a href="#" class="user-review__link"
-                  >смотреть отзыв на сервисе</a
-                >
-              </figcaption>
-            </figure>
-          </section>
+          <div class="long-read__subcontainer">
+            <section class="long-read__section">
+              <h4 class="long-read__accent-title">
+                Постепенный рост показателей
+              </h4>
+              <img
+                class="long-read__image"
+                loading="lazy"
+                src="./images/long-read/long-read-third.png"
+                alt="Накрутка"
+              />
+              <p class="text long-read__text">
+                Накрутка не заметна, потому что прирост показателей происходит
+                по интервалам, последовательно и гармонично
+              </p>
+            </section>
+            <section class="long-read__section">
+              <h4 class="long-read__accent-title">Живые комментарии по теме</h4>
+              <img
+                class="long-read__image"
+                loading="lazy"
+                src="./images/long-read/long-read-fourth.png"
+                alt="Комментарии"
+              />
+              <p class="text long-read__text">
+                Живые комментарии по теме поста от реальных пользователей
+                помогут увеличить доверие
+              </p>
+            </section>
+          </div>
+          <div class="long-read__subcontainer">
+            <section class="long-read__section">
+              <h4 class="long-read__accent-title">
+                Аккаунты, неотличимые от реальных людей
+              </h4>
+              <img
+                class="long-read__image"
+                loading="lazy"
+                src="./images/long-read/long-read-fifth.png"
+                alt="Имидж"
+              />
+              <p class="text long-read__text">
+                Они помогут сделать имидж аккаунту и увеличить доверие при
+                небольших затратах
+              </p>
+            </section>
+            <section class="long-read__section">
+              <figure class="long-read__review user-review">
+                <blockquote class="long-read__quote user-review__quote">
+                  <p class="user-review__grade long-read__grade">
+                    Оценка: <span class="user-review__span-accent">4.8</span>
+                  </p>
+                  <ul class="user-review__stars">
+                    <li
+                      class="user-review__star user-review__star_type_full"
+                    ></li>
+                    <li
+                      class="user-review__star user-review__star_type_full"
+                    ></li>
+                    <li
+                      class="user-review__star user-review__star_type_full"
+                    ></li>
+                    <li
+                      class="user-review__star user-review__star_type_full"
+                    ></li>
+                    <li
+                      class="user-review__star user-review__star_type_semi"
+                    ></li>
+                  </ul>
+                  <p class="user-review__review">
+                    Привели живых хороших подписчиков, многие из которых
+                    оказались целевой аудиторией, это очень приятно!
+                  </p>
+                </blockquote>
+                <img
+                  src="./images/blar.png"
+                  alt=""
+                  class="user-review__avatar"
+                />
+                <figcaption class="long-read__name user-review__name">
+                  Kimmy Blar,
+                  <a href="#" class="user-review__link"
+                    >смотреть отзыв на сервисе</a
+                  >
+                </figcaption>
+              </figure>
+            </section>
+          </div>
           <section class="long-read__section long-read__section_size_l">
             <h2 class="section-title long-read__title">
               Заказать иммитацию органического роста через персонального
