--- a/index.html
+++ b/index.html
@@ -7,8 +7,14 @@
     <meta name="author" content="" />
     <meta name="keywords" content="" />
     <meta name="description" content="" />
-    <link rel="stylesheet" href="./pages/global.css" />
-    <link rel="stylesheet" href="./pages/index.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdn.rawgit.com/bread2077/temp/main/pages/global.css"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdn.rawgit.com/bread2077/temp/main/pages/index.css"
+    />
     <title>Главная</title>
   </head>
   <body class="root">
@@ -1734,7 +1740,13 @@
         <p class="culc__text"></p>
       </li>
     </template>
-    <script type="module" src="./scripts/base.js"></script>
-    <script type="module" src="./scripts/pages/index.js"></script>
+    <script
+      type="module"
+      src="https://cdn.rawgit.com/bread2077/temp/main/scripts/base.js"
+    ></script>
+    <script
+      type="module"
+      src="https://cdn.rawgit.com/bread2077/temp/main/scripts/pages/index.js"
+    ></script>
   </body>
 </html>
